--- a/1.linux_community/1.4-ict_skills.md
+++ b/1.linux_community/1.4-ict_skills.md
@@ -33,7 +33,7 @@ CLI or GUI
 - Terminal (Gnome) or Konsole (KDE) - (emulate *Teletype* / tty)
 - CTR+ALT+F# => tty console
 
-## Presentation & projest tools
+## Presentation & project tools
 
 - LibreOffice Impress (Powerpoint-like) - `.odp` format
 - Beamer , LaTeX for presentation w/ code
