--- a/2.finding_your_way_on_linux/2.2-cli_help.md
+++ b/2.finding_your_way_on_linux/2.2-cli_help.md
@@ -29,6 +29,29 @@ Partial list of the used files, terms and utilities
 - search with `/` + `n` for next matches
 - `man -k them` search theme in all man pages = a propos
 - `man -w command` display location of the man page
+- Section & Description
+  - NAME : Command name and brief description
+  - SYNOPSIS : Description of the command’s syntax
+  - DESCRIPTION : Description of the effects of the command
+  - OPTIONS : Available options
+  - ARGUMENTS : Available arguments
+  - FILES : Auxiliary files
+  - EXAMPLES : A sample of the command line
+  - SEE ALSO : Cross-references to the related topics
+  - DIAGNOSTICS : Warning and Error messages
+  - COPYRIGHT : Author(s) of the command
+  - BUGS : Any known limitations of the command
+- Category Description
+  - 1 User command
+  - 2 System calls
+  - 3 Functions of the C library
+  - 4 Drivers and device files
+  - 5 Configuration files and file formats
+  - 6 Games
+  - 7 Miscellaneous
+  - 8 System administrator commands
+  - 9 Kernel functions (not standard)
+
 
 ## Info Pages
 
