--- a/2.finding_your_way_on_linux/2.4-creating-moving-deleting-files.md
+++ b/2.finding_your_way_on_linux/2.4-creating-moving-deleting-files.md
@@ -28,6 +28,7 @@ Partial list of the used files, terms and utilities
 - `find` list directory (like ls) or search
 - `cp` copy files / add `-r` for directory
 - `cp -u` copy file only if destination is missing or older
+- `cp -r` copy directory and content recursively
 - `cat` read file
 - `pwd` output directory path
 
