--- a/3.the-power-of-command-line/3.3-scripts.md
+++ b/3.the-power-of-command-line/3.3-scripts.md
@@ -77,7 +77,7 @@ Compare strings
 
 ## Exit Code
 
-- `$?` : **0** if previous command execution is correct / **1** if previous command has failed
+- `$?` : **0** if previous command execution is correct / **1 or other number** if previous command has failed
 
 ## Handle many arguments
 
@@ -90,4 +90,4 @@ Compare strings
 
 ## Regular Expression for Error checking
 
-- `echo $1 | grep "^[A-Z]*$" > /dev/null if [ $? -ne 0 ] then echo "argument must start with a capital letter" fi`
+- `echo $1 | grep "^[A-Z]+$" > /dev/null if [ $? -ne 0 ] then echo "argument must start with a capital letter" fi`
