--- a/4.linux-operating-system/4.3-where-data-is-stored.md
+++ b/4.linux-operating-system/4.3-where-data-is-stored.md
@@ -90,9 +90,9 @@ It stores the command line history.
 - **.bash_logout**
 It includes commands to execute when leaving the login shell.
 - **.bashrc**
-Bash’s initialization script for non-login shells.
+ is specific to the Bash shell and is read each time a new interactive Bash shell is started. It is used for user-specific configurations and settings for interactive shell sessions.
 - **.profile**
-Bash’s initialization script for login shells.
+ is a more general profile file, read and executed during the login process, and applies to both login and non-login shell sessions. It sets up environment variables and configurations that should apply to the entire session, regardless of the shell used.
 
 ## Linux Kernel
 
