--- a/3.the-power-of-command-line/3.2-searching-extracting-data.md
+++ b/3.the-power-of-command-line/3.2-searching-extracting-data.md
@@ -48,7 +48,7 @@ Partial list of the used files, terms and utilities
 - `cut`
 Removes sections from each line of a file.
 - `cat`
-Displays or concatenates files.accueil des artistes
+Displays or concatenates files.
 - `find`
 Searches for files in a directory hierarchy.
 - `less`
